add and modified files

--- a/JS-Assignment-4-Cheatsheet/index.html
+++ b/JS-Assignment-4-Cheatsheet/index.html
@@ -3,14 +3,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>JS-Assignment-3-Strings</title>
+    <title>JS-Assignment-4-Cheatsheet</title>
 </head>
 <body>
-    <h1>JS-Assignment-3-Strings</h1>
+    <h1>JS-Assignment-4-Cheatsheet</h1>
 
 
-    
 
-<script src="index.html"></script>
+
+    <script src="index.html"></script>
 </body>
 </html>
