--- a/JS-Assignment-9 -Calculaotor/index.html
+++ b/JS-Assignment-9 -Calculaotor/index.html
@@ -1,13 +1,69 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Making a Scientific Calculator</title>
     <link rel="stylesheet" href="style.css">
 </head>
+
 <body>
     <h1>Hello I'm a Calculator:</h1>
-    
+    <div class="calculator">
+        <div class="container">
+            <div class="calculator-lentgh">
+                <div class="row">
+                    <input type="text" class="input">
+                </div>
+                <div class="row">
+                    <button class="button">AC</button>
+                    <button class="button">DE</button>
+                    <button class="button">.</button>
+                    <button class="button bg">/</button>
+                </div>
+                <div class="row">
+                    <button class="button">7</button>
+                    <button class="button">8</button>
+                    <button class="button">9</button>
+                    <button class="button bg">*</button>
+                </div>
+                <div class="row">
+                    <button class="button">4</button>
+                    <button class="button">5</button>
+                    <button class="button">6</button>
+                    <button class="button bg">-</button>
+                </div>
+                <div class="row">
+                    <button class="button">1</button>
+                    <button class="button">2</button>
+                    <button class="button">3</button>
+                    <button class="button bg">+</button>
+                </div>
+                <div class="row">
+                    <button class="button">0</button>
+                    <button class="button">00</button>
+                    <button class="button equal bg">=</button>
+                </div>
+                <button id="toggle">></button>
+            </div>
+
+            <div class="scientific-buttons" id="scientific-buttons" style="display: none;">
+                <div class="row">
+                    <button class="button">sin</button>
+                    <button class="button">cos</button>
+                    <button class="button">tan</button>
+                    <button class="button">log</button>
+                </div>
+                <div class="row">
+                    <button class="button">ln</button>
+                    <button class="button">%</button>
+                    <button class="button">x^2</button>
+                </div>
+            </div>
+        </div>
+    </div>
+
 </body>
+
 </html>
