designe completed of calculator

--- a/JS-Assignment-9 -Calculaotor/index.html
+++ b/JS-Assignment-9 -Calculaotor/index.html
@@ -59,11 +59,17 @@
                     <button class="button">ln</button>
                     <button class="button">%</button>
                     <button class="button">x^2</button>
+                    <button class="button">√</button>
+                    <button class="button equal bg">=</button>
                 </div>
             </div>
+            
         </div>
     </div>
 
+
+
+    <script src="script.js"></script>
 </body>
 
 </html>
