--- a/JS-Assignment-9 -Calculaotor/index.html
+++ b/JS-Assignment-9 -Calculaotor/index.html
@@ -12,9 +12,23 @@
     <h1>Hello I'm a Calculator:</h1>
     <div class="calculator">
         <div class="container">
-            <div class="calculator-lentgh">
+            <div class="calculator-lentgh" id="calculator-lentgh">
                 <div class="row">
                     <input type="text" class="input">
+                </div>
+                <div class="scientific-buttons" id="scientific-buttons" style="display: none;">
+                    <div class="row">
+                        <button class="button bg-blue">sin</button>
+                        <button class="button bg-blue">cos</button>
+                        <button class="button bg-blue">tan</button>
+                        <button class="button bg-blue">log</button>
+                    </div>
+                    <div class="row">
+                        <button class="button bg-blue">ln</button>
+                        <button class="button bg-blue">%</button>
+                        <button class="button bg-blue">x^2</button>
+                        <button class="button bg-blue">√</button>
+                    </div>
                 </div>
                 <div class="row">
                     <button class="button">AC</button>
@@ -47,23 +61,6 @@
                 </div>
                 <button id="toggle">></button>
             </div>
-
-            <div class="scientific-buttons" id="scientific-buttons" style="display: none;">
-                <div class="row">
-                    <button class="button">sin</button>
-                    <button class="button">cos</button>
-                    <button class="button">tan</button>
-                    <button class="button">log</button>
-                </div>
-                <div class="row">
-                    <button class="button">ln</button>
-                    <button class="button">%</button>
-                    <button class="button">x^2</button>
-                    <button class="button">√</button>
-                    <button class="button equal bg">=</button>
-                </div>
-            </div>
-            
         </div>
     </div>
 
